@@ -1,4 +1,8 @@
-2017-1-07 belangeo <belangeo@gmail.com>
+2017-11-07 belangeo <belangeo@gmail.com>
+
+    * Changed the stereo panning law for cosine/sine within Pan object.
+
+2017-11-07 belangeo <belangeo@gmail.com>
 
     * Upgraded version number to 0.8.8.
 
